; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Pack.c_PackAddData.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Pack.c_PackAddData.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@VALUE_DATA = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @PackAddData(i32* %0, i8* %1, i8* %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  store i32* %0, i32** %6, align 8
  store i8* %1, i8** %7, align 8
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  %12 = load i32*, i32** %6, align 8
  %13 = icmp eq i32* %12, null
  br i1 %13, label %20, label %14

14:                                               ; preds = %4
  %15 = load i8*, i8** %8, align 8
  %16 = icmp eq i8* %15, null
  br i1 %16, label %20, label %17

17:                                               ; preds = %14
  %18 = load i8*, i8** %7, align 8
  %19 = icmp eq i8* %18, null
  br i1 %19, label %20, label %21

20:                                               ; preds = %17, %14, %4
  store i32* null, i32** %5, align 8
  br label %35

21:                                               ; preds = %17
  %22 = load i8*, i8** %8, align 8
  %23 = load i32, i32* %9, align 4
  %24 = call i32* @NewDataValue(i8* %22, i32 %23)
  store i32* %24, i32** %10, align 8
  %25 = load i8*, i8** %7, align 8
  %26 = load i32, i32* @VALUE_DATA, align 4
  %27 = call i32* @NewElement(i8* %25, i32 %26, i32 1, i32** %10)
  store i32* %27, i32** %11, align 8
  %28 = load i32*, i32** %6, align 8
  %29 = load i32*, i32** %11, align 8
  %30 = call i32 @AddElement(i32* %28, i32* %29)
  %31 = icmp eq i32 %30, 0
  br i1 %31, label %32, label %33

32:                                               ; preds = %21
  store i32* null, i32** %5, align 8
  br label %35

33:                                               ; preds = %21
  %34 = load i32*, i32** %11, align 8
  store i32* %34, i32** %5, align 8
  br label %35

35:                                               ; preds = %33, %32, %20
  %36 = load i32*, i32** %5, align 8
  ret i32* %36
}

declare dso_local i32* @NewDataValue(i8*, i32) #1

declare dso_local i32* @NewElement(i8*, i32, i32, i32**) #1

declare dso_local i32 @AddElement(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
